Initial persistent topology
