# directory/docs/swagger.json
@@ -263,6 +263,240 @@
                     }
                 }
             }
+        },
+        "/api/presence/gateway": {
+            "post": {
+                "description": "On Nym nodes startup they register their presence indicating they should be alive and get added to the set of active nodes in the topology.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "presence"
+                ],
+                "summary": "Lets a gateway tell the directory server it's coming online",
+                "operationId": "registerGatewayPresence",
+                "parameters": [
+                    {
+                        "description": "object",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.GatewayRegistrationInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {},
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/presence/mix": {
+            "post": {
+                "description": "On Nym nodes startup they register their presence indicating they should be alive and get added to the set of active nodes in the topology.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "presence"
+                ],
+                "summary": "Lets a mixnode tell the directory server it's coming online",
+                "operationId": "registerMixPresence",
+                "parameters": [
+                    {
+                        "description": "object",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.MixRegistrationInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {},
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/presence/reputation/{id}": {
+            "patch": {
+                "description": "Changes reputation of given node to some specified value",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "presence"
+                ],
+                "summary": "Change reputation of a node",
+                "operationId": "changeReputation",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Node Identity",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "New Reputation",
+                        "name": "reputation",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {},
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/presence/topology": {
+            "get": {
+                "description": "On Nym nodes startup they register their presence indicating they should be alive. This method provides a list of nodes which have done so.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "presence"
+                ],
+                "summary": "Lists which Nym mixnodes and gateways on the network alongside their reputation.",
+                "operationId": "getTopology",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Topology"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/presence/{id}": {
+            "delete": {
+                "description": "Messages sent by a node on powering down to indicate it's going offline so that it should get removed from active topology.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "presence"
+                ],
+                "summary": "Unregister presence of node.",
+                "operationId": "unregisterPresence",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Node Identity",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {},
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -288,6 +522,66 @@
                 }
             }
         },
+        "models.GatewayRegistrationInfo": {
+            "type": "object",
+            "required": [
+                "clientsHost",
+                "identityKey",
+                "mixHost",
+                "sphinxKey",
+                "version"
+            ],
+            "properties": {
+                "clientsHost": {
+                    "type": "string"
+                },
+                "identityKey": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "mixHost": {
+                    "type": "string"
+                },
+                "sphinxKey": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.MixRegistrationInfo": {
+            "type": "object",
+            "required": [
+                "identityKey",
+                "layer",
+                "mixHost",
+                "sphinxKey",
+                "version"
+            ],
+            "properties": {
+                "identityKey": {
+                    "type": "string"
+                },
+                "layer": {
+                    "type": "integer"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "mixHost": {
+                    "type": "string"
+                },
+                "sphinxKey": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "string"
+                }
+            }
+        },
         "models.MixStatus": {
             "type": "object",
             "required": [
@@ -304,6 +598,27 @@
                 },
                 "up": {
                     "type": "boolean"
+                }
+            }
+        },
+        "models.Topology": {
+            "type": "object",
+            "required": [
+                "gateways",
+                "mixNodes"
+            ],
+            "properties": {
+                "gateways": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.GatewayRegistrationInfo"
+                    }
+                },
+                "mixNodes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.MixRegistrationInfo"
+                    }
                 }
             }
         }
