# directory/server.go
@@ -15,6 +15,7 @@
 package server
 
 import (
+	"github.com/nymtech/nym/validator/nym/directory/presence"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -69,11 +70,26 @@ func New() *gin.Engine {
 	// Measurements: wire up dependency injection
 	measurementsCfg := injectMeasurements(policy)
 
+	// Presence: wire up dependency injection
+	presenceCfg := injectPresence(policy)
+
 	// Register all HTTP controller routes
 	healthcheck.New().RegisterRoutes(router)
 	mixmining.New(measurementsCfg).RegisterRoutes(router)
+	presence.New(presenceCfg).RegisterRoutes(router)
 
 	return router
+}
+
+func injectPresence(policy *bluemonday.Policy) presence.Config {
+	sanitizer := presence.NewSanitizer(policy)
+	db := presence.NewDb()
+	presenceService := *presence.NewService(db)
+
+	return presence.Config{
+		Service:   &presenceService,
+		Sanitizer: sanitizer,
+	}
 }
 
 func injectMeasurements(policy *bluemonday.Policy) mixmining.Config {
